--- a/iRadio Capture 2.0/iRadio Capture 2.0-Info.plist
+++ b/iRadio Capture 2.0/iRadio Capture 2.0-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>icon</string>
 	<key>CFBundleIdentifier</key>
 	<string>A-Programmer-s-Crucible.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -29,7 +29,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Garrett Davidson. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>MainWindowController</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
